feat: update main page comments

--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@ CPU Registers:
 
 CR2: 0000000000000000
 ---[ end trace 404 ]---
-Kernel panic: Attempted to fetch non-existent page
+Kernel panic: You ran out of ADHD meds!!!  
 
 Suggested Actions:
  - Check address and try again
+ - Smash your computer with a hammer
  - Pretend it didn't happen
  - Find someone to complain to
- - Shit on your table
+ - Shit on your desk 
 
 _[ Press any key to reboot internet ]_ </pre>
 <div class="blinking-cursor"></div>
@@ -86,3 +87,4 @@ _[ Press any key to reboot internet ]_ </pre>
 </body>
 </html>
 
+Who clicks on this, anyway?
