update: fix comments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ CPU: 0 PID: 404 Comm: page fault Not tainted 4.0.4 #1
 Hardware name: BK-0010-01
 
 RIP: 0010:locate_page+0x404/0xdeadbeef
-Code: Bad address at /missing-page
+Code: Bad address at /brain
 Modules linked in:
  - hamster_fs
  - idle_procrastination
@@ -86,5 +86,3 @@ _[ Press any key to reboot internet ]_ </pre>
 </div>
 </body>
 </html>
-
-Who clicks on this, anyway?
